<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="none">None</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="job_scheduled">\"Job Scheduled, job will run when \"</string>
    <string name="set_atleast_one_constraint">Please set at least one constraint</string>
    <string name="are_met">this constraints are met.</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline: </string>
    <string name="not_set">Not Set</string>
    <string name="jobs_cancellled">Jobs cancelled</string>
</resources>